[package]
name = "squads-multisig-program"
version = "2.1.0"
description = "Squads Multisig Program V4"
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "squads_multisig_program"

[features]
default = ["custom-heap"]
custom-heap = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
testing = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["allow-missing-optionals"] }
anchor-spl = { version = "0.32.1", features = [
    "token",
    "token_2022_extensions",
    "memo",
] }
solana-zk-sdk = "2.3.13"
solana-address-lookup-table-program = "2.2.1"
solana-program = "2.2.1"
solana-security-txt = "1.1.1"
